Tweaks and media update (#194)