@@ -18,9 +18,9 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.ZonedDateTime;
-import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -49,7 +49,7 @@ class AttachmentFacadeTest {
                 .attachmentId(UUID.randomUUID())
                 .extension(AttachmentExtension.PSD)
                 .filename("example.psd")
-                .fileUrl(new URL("https://example.com/"))
+                .fileUri(new URI("/test"))
                 .md5("3c518eeb674c71b30297f072fde7eba5")
                 .createDate(ZonedDateTime.now())
                 .build();
@@ -73,8 +73,6 @@ class AttachmentFacadeTest {
         attachmentFacade = new AttachmentFacade(
                 new CreateAttachmentImpl(postServiceClient, attachmentFactory, attachmentUploadStrategy, eventPublisher),
                 new DeleteAttachmentImpl(eventPublisher, attachmentRepository),
-                new UpdateAttachmentImpl(eventPublisher, attachmentRepository),
-                new ReplaceAttachmentImpl(eventPublisher, attachmentRepository),
                 attachmentRepository,
                 attachmentFactory,
                 attachmentDtoFactory
@@ -83,7 +81,7 @@ class AttachmentFacadeTest {
 
     @Test
     @DisplayName("Create attachment")
-    void createAttachment() throws MalformedURLException {
+    void createAttachment() throws MalformedURLException, URISyntaxException {
         // Given ownerId, postId, attachmentDTO and multipart file
         UUID userId = UUID.randomUUID();
         UUID postId = UUID.randomUUID();
@@ -134,7 +132,7 @@ class AttachmentFacadeTest {
         // When createAttachment() method called
         when(postServiceClient.getUserPost(any(), any())).thenReturn(postDetailsDTO);
         when(attachmentUploadStrategy.uploadAttachment(any(), any())).thenReturn(new AttachmentUploadStrategy.UploadedAttachmentFile(
-                new URL("https://example.com")
+                new URI("/test")
         ));
         // Then return generated uuid
         assertNotNull(attachmentFacade.createAttachment(userId, postId, attachmentDTO, attachmentFile), "AttachmentId was not returned.");
@@ -194,69 +192,6 @@ class AttachmentFacadeTest {
         assertThrows(
                 RecordNotFoundException.class,
                 () -> attachmentFacade.createAttachment(userId, postId, attachmentDTO, attachmentFile),
-                "Exception was not thrown."
-        );
-    }
-
-    @Test
-    @DisplayName("Replace attachment")
-    void replaceAttachment() {
-        // Given attachmentDto, userId and postId and attachmentId
-        UUID userId = UUID.randomUUID();
-        UUID postId = UUID.randomUUID();
-        UUID attachmentId = UUID.randomUUID();
-        // When replaceAttachment() method called
-        when(attachmentRepository.findByOwnerIdAndPostIdAndAttachmentId(userId, postId, attachmentId))
-                .thenReturn(Optional.of(attachment));
-        // Then run successfully
-        assertDoesNotThrow(() -> attachmentFacade.replaceAttachment(userId, postId, attachmentId, attachmentDTO), "Exception was thrown");
-    }
-
-    @Test
-    @DisplayName("Replace attachment with non existing attachmentId")
-    void replaceAttachment2() {
-        // Given attachmentDTO, userId, postId and non existing attachmentId
-        UUID userId = UUID.randomUUID();
-        UUID postId = UUID.randomUUID();
-        UUID attachmentId = UUID.randomUUID();
-        // When replaceAttachment() method called
-        when(attachmentRepository.findByOwnerIdAndPostIdAndAttachmentId(userId, postId, attachmentId)).thenReturn(Optional.empty());
-        // Then throw no record found exception
-        assertThrows(
-                RecordNotFoundException.class,
-                () -> attachmentFacade.replaceAttachment(userId, postId, attachmentId, attachmentDTO),
-                "Exception was not thrown."
-        );
-    }
-
-    @Test
-    @DisplayName("Update attachment")
-    void updateAttachment() {
-        // Given attachmentDTO, userId, postId and attachmentId
-        UUID userId = UUID.randomUUID();
-        UUID postId = UUID.randomUUID();
-        UUID attachmentId = UUID.randomUUID();
-        // When updateAttachment() method called
-        when(attachmentRepository.findByOwnerIdAndPostIdAndAttachmentId(userId, postId, attachmentId))
-                .thenReturn(Optional.of(attachment));
-        // Then run successfully
-        assertDoesNotThrow(() -> attachmentFacade.updateAttachment(userId, postId, attachmentId, attachmentDTO), "Exception was thrown");
-    }
-
-    @Test
-    @DisplayName("Update attachment with non existing attachmentId")
-    void updateAttachment2() {
-        // Given attachmentDTO, userId, postId and non existing attachmentId
-        UUID userId = UUID.randomUUID();
-        UUID postId = UUID.randomUUID();
-        UUID attachmentId = UUID.randomUUID();
-        // When updateAttachment() method called
-        when(attachmentRepository.findByOwnerIdAndPostIdAndAttachmentId(userId, postId, attachmentId))
-                .thenReturn(Optional.empty());
-        // Then throw no record found exception
-        assertThrows(
-                RecordNotFoundException.class,
-                () -> attachmentFacade.updateAttachment(userId, postId, attachmentId, attachmentDTO),
                 "Exception was not thrown."
         );
     }
