@@ -5,8 +5,8 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import ws.furrify.posts.media.MediaExtension;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -16,29 +16,29 @@ class MediaFileTest {
 
     private static String filename;
     private static MediaExtension extension;
-    private static URL fileUrl;
-    private static URL thumbnailUrl;
+    private static URI fileUri;
+    private static URI thumbnailUri;
     private static String md5;
 
     @BeforeAll
-    static void setUp() throws MalformedURLException {
+    static void setUp() throws URISyntaxException {
         filename = "test.png";
         extension = MediaExtension.PNG;
-        fileUrl = new URL("https://google.pl");
-        thumbnailUrl = new URL("https://google2.pl");
+        fileUri = new URI("/test");
+        thumbnailUri = new URI("/test");
         md5 = "3c518eeb674c71b30297f072fde7eba5";
     }
 
     @Test
     @DisplayName("Create MediaFile")
     void of() {
-        // Given filename, extension, fileUrl, thumbnailUrl and md5
+        // Given filename, extension, fileUri, thumbnailUri and md5
         // When builder build
         var mediaFile = MediaFile.builder()
                 .filename(filename)
                 .extension(extension)
-                .fileUrl(fileUrl)
-                .thumbnailUrl(thumbnailUrl)
+                .fileUri(fileUri)
+                .thumbnailUri(thumbnailUri)
                 .md5(md5)
                 .build();
         // Then return created MediaFile
@@ -54,14 +54,14 @@ class MediaFileTest {
                         "Created extension is not the same."
                 ),
                 () -> assertEquals(
-                        fileUrl,
-                        mediaFile.getFileUrl(),
-                        "Created fileUrl is not the same."
+                        fileUri,
+                        mediaFile.getFileUri(),
+                        "Created fileUri is not the same."
                 ),
                 () -> assertEquals(
-                        thumbnailUrl,
-                        mediaFile.getThumbnailUrl(),
-                        "Created thumbnailUrl is not the same."
+                        thumbnailUri,
+                        mediaFile.getThumbnailUri(),
+                        "Created thumbnailUri is not the same."
                 ),
                 () -> assertEquals(
                         md5,
@@ -80,8 +80,8 @@ class MediaFileTest {
         var mediaFileBuilder = MediaFile.builder()
                 .filename(filename)
                 .extension(extension)
-                .fileUrl(fileUrl)
-                .thumbnailUrl(thumbnailUrl)
+                .fileUri(fileUri)
+                .thumbnailUri(thumbnailUri)
                 .md5(md5);
         // Then throw IllegalStateException
         assertThrows(
@@ -100,8 +100,8 @@ class MediaFileTest {
         var mediaFileBuilder = MediaFile.builder()
                 .filename(filename)
                 .extension(extension)
-                .fileUrl(fileUrl)
-                .thumbnailUrl(thumbnailUrl)
+                .fileUri(fileUri)
+                .thumbnailUri(thumbnailUri)
                 .md5(md5);
         // Then throw IllegalStateException
         assertThrows(
@@ -120,8 +120,8 @@ class MediaFileTest {
         var mediaFileBuilder = MediaFile.builder()
                 .filename(filename)
                 .extension(extension)
-                .fileUrl(fileUrl)
-                .thumbnailUrl(thumbnailUrl)
+                .fileUri(fileUri)
+                .thumbnailUri(thumbnailUri)
                 .md5(md5);
         // Then throw IllegalStateException
         assertThrows(
